test/bad/classes/method01.px

class Test def
    x: Int

    func f(): Int def
        return x
